# AI1

./: .gitignore  README.md  Report_1_requirements.txt  follow_line.nxc  lightsensor.nxc  test.nxc
NXC/: follow_line.nxc  follow_line_parallel.nxc  lightsensor.nxc  parallel.nxc  square.nxc
NXC/robot/: follow_line.nxc  main.nxc  pid_controller.nxc  reversing.nxc  state_machine.nxc
Solver/: CMakeLists.txt  parser.cpp
Solver/src/: DOTgraph.cpp  DOTgraph.hpp  main.cpp  map.cpp  map.hpp  node.cpp  node.hpp  point.cpp  point.hpp  test.c++  tree.cpp  tree.hpp  wavefront.cpp  wavefront.hpp
